--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,5 +2,11 @@ Django>=5.0,<6.0
 django-cors-headers>=4.3
 djangorestframework>=3.15
 google-generativeai>=0.3.0
+google-genai>=0.2.0
+google-auth>=2.27.0
+google-auth-oauthlib>=1.2.0
+google-auth-httplib2>=0.2.0
+google-api-python-client>=2.115.0
 python-dotenv>=1.0.0
+weasyprint>=60.0
 
