--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,9 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.552.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
@@ -91,5 +93,9 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "tailwindcss": "^3.4.18"
+  },
+  "resolutions": {
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2"
   }
 }
