--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -67,5 +67,14 @@ Thumbs.db
 # Environment files
 .env
 .env.*
+!.env.example
+
+# Google Cloud Credentials (NEVER COMMIT!)
+credentials/
+*.json
+!package.json
+!package-lock.json
+vertex-ai-credentials.json
+*-credentials.json
 
 
