--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,18 @@
+# =============================================================================
+# RenovAlte Backend Dependencies
+# =============================================================================
+
+# Django Framework
 Django>=5.0,<6.0
 django-cors-headers>=4.3
 djangorestframework>=3.15
+
+# Google AI Services
+google-generativeai>=0.8.0              # Google Gemini AI for text operations
+google-cloud-aiplatform>=1.73.0         # Vertex AI for image generation
+google-api-python-client>=2.187.0       # Google API client
+
+# Utilities
 requests>=2.31
 python-dotenv>=1.0.0
 
