Remove un-necessary files and required changes in frontend

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,15 @@ out/
 .env.*
 !.env.example
 
+# --- Google Cloud Credentials (NEVER COMMIT!) ---
+credentials/
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+vertex-ai-credentials.json
+*-credentials.json
+
 # --- IDE / OS ---
 .vscode/
 .idea/
