--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,7 +15,19 @@ GOOGLE_APPLICATION_CREDENTIALS=backend/credentials/vertex-ai-credentials.json
 #   - imagen-4.0-generate (good quality, faster)
 #   - imagen-4.0-fast-generate (fast, lower quality)
 # See available models in your account with the list you provided
-VERTEX_AI_IMAGEN_MODEL=imagen-4.0-ultra-generate
+
+# If module is not work 
+
+# Why it fails on your PC
+
+# You pulled the code from GitHub after the deprecation
+
+# You installed Vertex AI SDK freshly → no cached reference
+
+# Vertex AI tries to resolve publishers/google/models/imagen-4.0-ultra-generate → does not exist publicly → 404
+
+# Using a supported public model like imagen-3.0-generate-001 is the only reliable solution.
+VERTEX_AI_IMAGEN_MODEL=imagen-3.0-generate-001
 
 IMAGEN_ASPECT_RATIO=1:1
 
