--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,7 @@ djangorestframework>=3.15
 
 # Google AI Services
 google-generativeai>=0.8.0              # Google Gemini AI for text operations
-google-cloud-aiplatform>=1.73.0         # Vertex AI for image generation
+google-cloud-aiplatform==1.73.0         # Vertex AI for image generation
 google-api-python-client>=2.187.0       # Google API client
 
 # Utilities
