refactor: clean codebase for public release
- Remove all hardcoded API keys from source code
- Replace with environment variable references
- Update models from deprecated gemini-2.0-flash to gemini-2.5-flash
- Unify GEMINI_API_KEY and GOOGLE_API_KEY settings
- Add professional README with architecture docs
- Clean .env.example files for both backend and frontend
- Update .gitignore to exclude sensitive files
- Add missing migration files

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,16 @@ vertex-ai-credentials.json
 .DS_Store
 Thumbs.db
 
+# --- Misc files not for public repo ---
+migration.sql
+db.sqlite3.bak
+show_embeddings.py
+test_rag.py
+cleanup_orphaned_files.py
+FREE_LLM_RECOMMENDATION_FOR_PROFESSOR.md
+HUGGINGFACE_INTEGRATION_GUIDE.md
+PRESENTATION_GUIDE.md
+
+# Documentation PDFs (keep knowledge_base PDFs for RAG)
+backend/*.pdf
 
