--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,36 +1,25 @@
-GEMINI_API_KEY=AIzaSyBixKKkZ7Kvk2nyQIgPSSUHp1Of5Zwm-cw
-
-
 # ============================================================================
-# 2. GOOGLE CLOUD VERTEX AI (For High-Quality Image Generation)
+# RenovAlte Backend - Environment Variables
+# ============================================================================
+# Copy this file to .env and fill in your values
+# cp .env.example .env
+# ============================================================================
+
+# 1. GOOGLE GEMINI API KEY (Required)
+# Get your key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# 2. QDRANT VECTOR DATABASE (Optional - for RAG knowledge base)
+# Leave empty to use local file-based Qdrant storage
+# Or set up a free cluster at: https://cloud.qdrant.io
+QDRANT_URL=
+QDRANT_API_KEY=
+
+# 3. GOOGLE CLOUD VERTEX AI (Optional - for AI image generation)
 GOOGLE_CLOUD_PROJECT_ID=your-project-id-here
-
 GOOGLE_CLOUD_LOCATION=us-central1
-
 GOOGLE_APPLICATION_CREDENTIALS=backend/credentials/vertex-ai-credentials.json
-
-# Vertex AI Imagen Model Selection
-# Options:
-#   - imagen-4.0-ultra-generate (RECOMMENDED - best quality, slower)
-#   - imagen-4.0-generate (good quality, faster)
-#   - imagen-4.0-fast-generate (fast, lower quality)
-# See available models in your account with the list you provided
-
-# If module is not work 
-
-# Why it fails on your PC
-
-# You pulled the code from GitHub after the deprecation
-
-# You installed Vertex AI SDK freshly → no cached reference
-
-# Vertex AI tries to resolve publishers/google/models/imagen-4.0-ultra-generate → does not exist publicly → 404
-
-# Using a supported public model like imagen-3.0-generate-001 is the only reliable solution.
 VERTEX_AI_IMAGEN_MODEL=imagen-3.0-generate-001
-
 IMAGEN_ASPECT_RATIO=1:1
-
 IMAGEN_NUMBER_OF_IMAGES=1
-
 IMAGEN_SAFETY_FILTER=block_some
