--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,16 +7,18 @@ charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 distro==1.9.0
-Django==5.2.8
+Django==4.2.11
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 docstring_parser==0.17.0
 filelock==3.20.0
 fsspec==2025.12.0
+django-q2==1.5.5
 google-ai-generativelanguage
 google-api-core==2.28.1
 google-api-python-client==2.187.0
 google-auth==2.43.0
+google-auth-oauthlib==1.2.1
 google-auth-httplib2==0.2.1
 google-cloud-aiplatform==1.130.0
 google-cloud-bigquery==3.38.0
