--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,11 +1,12 @@
-# Google Gemini API Configuration
-# Get your API key from: https://makersuite.google.com/app/apikey
+# ============================================================================
+# RenovAlte Frontend - Environment Variables
+# ============================================================================
+# Copy this file to .env and fill in your values
+# cp .env.example .env
+# ============================================================================
 
-# Gemini API Key for AI Financing Assistant
+# Gemini API Key (for frontend AI features)
 REACT_APP_GEMINI_API_KEY=your_gemini_api_key_here
 
-# Instructions:
-# 1. Copy this file to .env (do not commit .env to git)
-# 2. Replace 'your_gemini_api_key_here' with your actual Gemini API key
-# 3. Restart the development server for changes to take effect
-
+# Google Places API Key (for contractor search)
+REACT_APP_GOOGLE_PLACES_API_KEY=your_google_places_api_key_here
